--- a/resources/public/customTemplates/viewWorkout.html
+++ b/resources/public/customTemplates/viewWorkout.html
@@ -28,9 +28,13 @@
       </div>
 
       <div class="modal-footer">
+        <button type="button"  style="margin-bottom: 10px; margin-right: 10%" 
+                class="btn btn-info pull-left"
+                id="viewEntriesButton">View entries</button>
+
         <button type="button" class="btn btn-primary" 
                 id="createSubmissionButton">Make submission</button>
-        <button type="button" class="btn btn-default" 
+        <button type="button" class="btn btn-default"
                 data-dismiss="modal">Close</button>
       </div>
     </div><!-- end of modal-content -->
